--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,6 +36,7 @@
 
 dependencies {
 
-    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.7.44-GTNH:dev")
+    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.7.45-GTNH:dev")
     implementation(rfg.deobf(project.files("lib/CNPC.jar")))
+    implementation(project.files("lib/nashorn.jar"))
 }
