--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,7 +36,9 @@
 
 dependencies {
 
-    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.7.54-GTNH:dev")
+    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.7.69-GTNH:dev")
     implementation(rfg.deobf(project.files("lib/CNPC.jar")))
+    implementation(rfg.deobf(project.files("lib/necrotempus-1.0.0.jar")))
+    implementation(rfg.deobf(project.files("lib/omniconfig-1.0.1-mc1.7.10.jar")))
     implementation(project.files("lib/nashorn.jar"))
 }
